# aithon

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aithon/: __init__.py  __main__.py  app.py  cli.py  config.py
src/aithon/agents/: base.py  openclaw.py
src/aithon/core/: finding.py  fix_plan.py  report.py  scanner.py  watcher.py
src/aithon/modules/: backup_scan.py  base.py  config_audit.py  env_leak.py  injection.py  network.py  permissions.py  secrets.py  token_burn.py
src/aithon/ui/: ascii_art.py  screens.py  theme.py  widgets.py
src/aithon/utils/: fs.py  patterns.py
tests/: conftest.py  test_backup_scan.py  test_config_audit.py  test_fix_plan.py  test_injection.py  test_permissions.py  test_scanner.py  test_secrets.py  test_token_burn.py  test_watcher.py
