[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aithon"
version = "0.1.0"
description = "Security scanner for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gregor D" }
]
keywords = ["security", "ai-agent", "pentesting", "scanner", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dependencies = [
    "textual>=0.47.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[project.scripts]
aithon = "aithon.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
