[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aithon-scan"
version = "0.2.1"
description = "Security scanner for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gregor D" }
]
keywords = ["security", "ai-agent", "pentesting", "scanner", "openclaw", "llm", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "textual>=0.47.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/politologhse/aithon"
Repository = "https://github.com/politologhse/aithon"
Issues = "https://github.com/politologhse/aithon/issues"

[project.scripts]
aithon = "aithon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aithon"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
